fix spacing of print version, add comments for future resume additions

--- a/src/components/pages/ResumePrint/ResumePrint.module.css
+++ b/src/components/pages/ResumePrint/ResumePrint.module.css
@@ -84,7 +84,7 @@
   font-size: 0.8rem;
   display: inline-block;
   position: absolute;
-  top: 3px;
+  top: 6px;
 }
 
 .roleHeading {
@@ -99,18 +99,17 @@
 .expContent {
   margin-left: 170px;
   line-height: 18px;
-  margin-bottom: 18px;
+  margin-bottom: 10px;
 }
 
 .expContent > p {
   font-size: 0.8rem;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 }
 
 .expContent > ul > li {
   font-size: 0.8rem;
   margin-left: 24px;
-  margin-bottom: 7px;
 }
 
 .expContent > ul > li:last-child {
